--- a/languages/woo-gift-cards-lite-en_US.po
+++ b/languages/woo-gift-cards-lite-en_US.po
@@ -1,9 +1,11 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Ultimate Gift Cards For WooCommerce 2.2.0\n"
-"POT-Creation-Date: 2021-09-30 19:59+0530\n"
-"PO-Revision-Date: 2021-09-30 20:00+0530\n"
+"Project-Id-Version: Ultimate Gift Cards For WooCommerce 2.2.1\n"
+"POT-Creation-Date: 2021-11-01 19:52+0530\n"
+"PO-Revision-Date: 2021-11-01 19:54+0530\n"
+"Last-Translator: \n"
 "Language-Team: MakeWebBetter\n"
+"Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -11,11 +13,9 @@ msgstr ""
 "X-Poedit-Basepath: ..\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-KeywordsList: _e;__;esc_html_e;esc_attr_e;esc_url_raw;esc_url;"
-"esc_attr;esc_html;esc_html__;_n;_x;_ex;_nx;esc_attr__;esc_attr_x;esc_html_x;"
-"_n_noop;_nx_noop;translate_nooped_plural\n"
-"Last-Translator: \n"
-"Language: en_US\n"
+"X-Poedit-KeywordsList: _e;__;esc_html_e;esc_attr_e;esc_url;esc_attr;esc_html;"
+"esc_html__;_n;_x;_ex;_nx;esc_attr__;esc_attr_x;esc_html_x;_n_noop;_nx_noop;"
+"translate_nooped_plural\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: admin/class-woocommerce-gift-cards-lite-admin.php:140
@@ -53,12 +53,6 @@ msgstr ""
 
 #: admin/class-woocommerce-gift-cards-lite-admin.php:187
 msgid "Premium Plugin"
-msgstr ""
-
-#: admin/class-woocommerce-gift-cards-lite-admin.php:215
-msgid ""
-"https://makewebbetter.com/product/giftware-woocommerce-gift-cards/?"
-"utm_source=mwb-giftcard-org&utm_medium=mwb-org&utm_campaign=giftcard-org"
 msgstr ""
 
 #: admin/class-woocommerce-gift-cards-lite-admin.php:234
