--- a/languages/woo-gift-cards-lite-da_DK.po
+++ b/languages/woo-gift-cards-lite-da_DK.po
@@ -2,21 +2,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Ultimate Gift Cards For WooCommerce 2.4.8\n"
 "POT-Creation-Date: 2023-01-09 11:42+0530\n"
-"PO-Revision-Date: 2023-01-09 11:48+0530\n"
+"PO-Revision-Date: 2023-01-09 08:39+0000\n"
 "Last-Translator: \n"
-"Language-Team: WP Swings\n"
-"Language: en_US\n"
+"Language-Team: Danish\n"
+"Language: da_DK\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.2.2\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Loco https://localise.biz/\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n;_x;_ex;_nx;esc_attr__;esc_attr_e;esc_attr_x;"
 "esc_html;esc_html__;esc_html_e;esc_html_x;_n_noop;_nx_noop;"
 "translate_nooped_plural\n"
 "X-Poedit-SearchPath-0: .\n"
+"Report-Msgid-Bugs-To: \n"
+"X-Loco-Version: 2.6.3; wp-6.1.1"
 
 #: admin/class-woocommerce-gift-cards-lite-admin.php:161
 #, php-format
@@ -641,14 +643,6 @@ msgstr ""
 msgid "Enable Email To Recipient."
 msgstr ""
 
-#: wps-wgc-lite-gdpr.php:37
-msgid "Downloadable"
-msgstr ""
-
-#: wps-wgc-lite-gdpr.php:37
-msgid "Mail to recipient"
-msgstr ""
-
 #: admin/partials/templates/wps_wgm_settings/wps-wgm-delivery-settings-array.php:27
 msgid "Enable Downloadable"
 msgstr ""
@@ -1265,6 +1259,14 @@ msgstr ""
 #: wps-wgc-lite-gdpr.php:37
 msgid "Ultimate Gift Cards For WooCommerce"
 msgstr ""
+
+#: wps-wgc-lite-gdpr.php:37
+msgid "Downloadable"
+msgstr "Danish"
+
+#: wps-wgc-lite-gdpr.php:37
+msgid "Mail to recipient"
+msgstr "danish"
 
 #: wps-wgc-lite-gdpr.php:57 wps-wgc-lite-gdpr.php:182
 msgid "Recipient Details"
