--- a/languages/woo-gift-cards-lite-es_ES.po
+++ b/languages/woo-gift-cards-lite-es_ES.po
@@ -2,21 +2,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Ultimate Gift Cards For WooCommerce 2.4.8\n"
 "POT-Creation-Date: 2023-01-09 11:42+0530\n"
-"PO-Revision-Date: 2023-01-09 11:48+0530\n"
+"PO-Revision-Date: 2023-01-09 07:03+0000\n"
 "Last-Translator: \n"
-"Language-Team: WP Swings\n"
-"Language: en_US\n"
+"Language-Team: Español\n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.2.2\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Loco https://localise.biz/\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n;_x;_ex;_nx;esc_attr__;esc_attr_e;esc_attr_x;"
 "esc_html;esc_html__;esc_html_e;esc_html_x;_n_noop;_nx_noop;"
 "translate_nooped_plural\n"
 "X-Poedit-SearchPath-0: .\n"
+"Report-Msgid-Bugs-To: \n"
+"X-Loco-Version: 2.6.3; wp-6.1.1"
 
 #: admin/class-woocommerce-gift-cards-lite-admin.php:161
 #, php-format
@@ -641,14 +643,6 @@ msgstr ""
 msgid "Enable Email To Recipient."
 msgstr ""
 
-#: wps-wgc-lite-gdpr.php:37
-msgid "Downloadable"
-msgstr ""
-
-#: wps-wgc-lite-gdpr.php:37
-msgid "Mail to recipient"
-msgstr ""
-
 #: admin/partials/templates/wps_wgm_settings/wps-wgm-delivery-settings-array.php:27
 msgid "Enable Downloadable"
 msgstr ""
@@ -948,7 +942,7 @@ msgstr ""
 #: public/class-woocommerce-gift-cards-lite-public.php:431
 #: public/class-woocommerce-gift-cards-lite-public.php:679
 msgid "Delivery Method"
-msgstr ""
+msgstr "spanis"
 
 #: admin/partials/woocommerce-gift-cards-lite-admin-display.php:51
 msgid "Gift Card Redeem"
@@ -1062,7 +1056,7 @@ msgstr ""
 #: public/class-woocommerce-gift-cards-lite-public.php:124
 #, php-format
 msgid "Message: %sField is empty."
-msgstr ""
+msgstr "spanish"
 
 #: public/class-woocommerce-gift-cards-lite-public.php:126
 #, php-format
@@ -1111,7 +1105,7 @@ msgstr ""
 
 #: public/class-woocommerce-gift-cards-lite-public.php:413
 msgid "Gift Message "
-msgstr ""
+msgstr "sapnish"
 
 #: public/class-woocommerce-gift-cards-lite-public.php:420
 msgid "Characters: ( "
@@ -1157,7 +1151,7 @@ msgstr ""
 #: public/class-woocommerce-gift-cards-lite-public.php:673
 #: wps-wgc-lite-gdpr.php:143
 msgid "Gift Message"
-msgstr ""
+msgstr "spanish"
 
 #: public/class-woocommerce-gift-cards-lite-public.php:1138
 msgid "VIEW CARD"
@@ -1265,6 +1259,14 @@ msgstr ""
 #: wps-wgc-lite-gdpr.php:37
 msgid "Ultimate Gift Cards For WooCommerce"
 msgstr ""
+
+#: wps-wgc-lite-gdpr.php:37
+msgid "Downloadable"
+msgstr "spanish"
+
+#: wps-wgc-lite-gdpr.php:37
+msgid "Mail to recipient"
+msgstr "spanish"
 
 #: wps-wgc-lite-gdpr.php:57 wps-wgc-lite-gdpr.php:182
 msgid "Recipient Details"
